parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIGIT
    CHARACTER

Grammar

Rule 0     S' -> expression
Rule 1     expression -> definition
Rule 2     expression -> assignment
Rule 3     definition -> CARDINALITY entity MODALITY relation CARDINALITY entity
Rule 4     definition -> CARDINALITY entity relation CARDINALITY entity
Rule 5     assignment -> entity COMPOSITION attributelist
Rule 6     entity -> ID
Rule 7     relation -> ID
Rule 8     attributelist -> attributelist DELIMITER ID
Rule 9     attributelist -> ID

Terminals, with rules where they appear

CARDINALITY          : 3 3 4 4
CHARACTER            : 
COMPOSITION          : 5
DELIMITER            : 8
DIGIT                : 
ID                   : 6 7 8 9
MODALITY             : 3
error                : 

Nonterminals, with rules where they appear

assignment           : 2
attributelist        : 5 8
definition           : 1
entity               : 3 3 4 4 5
expression           : 0
relation             : 3 4

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . definition
    (2) expression -> . assignment
    (3) definition -> . CARDINALITY entity MODALITY relation CARDINALITY entity
    (4) definition -> . CARDINALITY entity relation CARDINALITY entity
    (5) assignment -> . entity COMPOSITION attributelist
    (6) entity -> . ID

    CARDINALITY     shift and go to state 5
    ID              shift and go to state 4

    definition                     shift and go to state 1
    entity                         shift and go to state 2
    expression                     shift and go to state 3
    assignment                     shift and go to state 6

state 1

    (1) expression -> definition .

    $end            reduce using rule 1 (expression -> definition .)


state 2

    (5) assignment -> entity . COMPOSITION attributelist

    COMPOSITION     shift and go to state 7


state 3

    (0) S' -> expression .



state 4

    (6) entity -> ID .

    MODALITY        reduce using rule 6 (entity -> ID .)
    ID              reduce using rule 6 (entity -> ID .)
    $end            reduce using rule 6 (entity -> ID .)
    COMPOSITION     reduce using rule 6 (entity -> ID .)


state 5

    (3) definition -> CARDINALITY . entity MODALITY relation CARDINALITY entity
    (4) definition -> CARDINALITY . entity relation CARDINALITY entity
    (6) entity -> . ID

    ID              shift and go to state 4

    entity                         shift and go to state 8

state 6

    (2) expression -> assignment .

    $end            reduce using rule 2 (expression -> assignment .)


state 7

    (5) assignment -> entity COMPOSITION . attributelist
    (8) attributelist -> . attributelist DELIMITER ID
    (9) attributelist -> . ID

    ID              shift and go to state 9

    attributelist                  shift and go to state 10

state 8

    (3) definition -> CARDINALITY entity . MODALITY relation CARDINALITY entity
    (4) definition -> CARDINALITY entity . relation CARDINALITY entity
    (7) relation -> . ID

    MODALITY        shift and go to state 13
    ID              shift and go to state 12

    relation                       shift and go to state 11

state 9

    (9) attributelist -> ID .

    DELIMITER       reduce using rule 9 (attributelist -> ID .)
    $end            reduce using rule 9 (attributelist -> ID .)


state 10

    (5) assignment -> entity COMPOSITION attributelist .
    (8) attributelist -> attributelist . DELIMITER ID

    $end            reduce using rule 5 (assignment -> entity COMPOSITION attributelist .)
    DELIMITER       shift and go to state 14


state 11

    (4) definition -> CARDINALITY entity relation . CARDINALITY entity

    CARDINALITY     shift and go to state 15


state 12

    (7) relation -> ID .

    CARDINALITY     reduce using rule 7 (relation -> ID .)


state 13

    (3) definition -> CARDINALITY entity MODALITY . relation CARDINALITY entity
    (7) relation -> . ID

    ID              shift and go to state 12

    relation                       shift and go to state 16

state 14

    (8) attributelist -> attributelist DELIMITER . ID

    ID              shift and go to state 17


state 15

    (4) definition -> CARDINALITY entity relation CARDINALITY . entity
    (6) entity -> . ID

    ID              shift and go to state 4

    entity                         shift and go to state 18

state 16

    (3) definition -> CARDINALITY entity MODALITY relation . CARDINALITY entity

    CARDINALITY     shift and go to state 19


state 17

    (8) attributelist -> attributelist DELIMITER ID .

    DELIMITER       reduce using rule 8 (attributelist -> attributelist DELIMITER ID .)
    $end            reduce using rule 8 (attributelist -> attributelist DELIMITER ID .)


state 18

    (4) definition -> CARDINALITY entity relation CARDINALITY entity .

    $end            reduce using rule 4 (definition -> CARDINALITY entity relation CARDINALITY entity .)


state 19

    (3) definition -> CARDINALITY entity MODALITY relation CARDINALITY . entity
    (6) entity -> . ID

    ID              shift and go to state 4

    entity                         shift and go to state 20

state 20

    (3) definition -> CARDINALITY entity MODALITY relation CARDINALITY entity .

    $end            reduce using rule 3 (definition -> CARDINALITY entity MODALITY relation CARDINALITY entity .)

